<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/generic14dp"
    android:layout_marginTop="@dimen/generic16dp"
    android:layout_marginEnd="@dimen/generic14dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/CoinBitText.Body1Alternate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/generic14dp"
        android:background="@drawable/background_rounded_all"
        android:padding="@dimen/generic14dp">

        <TextView
            android:id="@+id/tvOpenAmount"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="$170.11" />

        <TextView
            android:id="@+id/tvOpenLabel"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic4dp"
            android:text="@string/open"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOpenAmount" />

        <TextView
            android:id="@+id/tvTodaysHighAmount"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOpenLabel"
            tools:text="$172.30" />

        <TextView
            android:id="@+id/tvTodaysHighLabel"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic4dp"
            android:text="@string/today_s_high"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTodaysHighAmount" />


        <TextView
            android:id="@+id/tvTodayLowAmount"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTodaysHighLabel"
            tools:text="$169.20" />

        <TextView
            android:id="@+id/tvTodayLowLabel"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic4dp"
            android:text="@string/today_s_low"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTodayLowAmount" />

        <TextView
            android:id="@+id/tvChangeTodayAmount"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTodayLowLabel"
            tools:text="$177.32" />

        <TextView
            android:id="@+id/tvChangeTodayLabel"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic4dp"
            android:text="@string/change_today"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChangeTodayAmount" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvVolumeQuantity"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12M" />

        <TextView
            android:id="@+id/tvVolumeLabel"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic4dp"
            android:text="@string/volume"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvVolumeQuantity" />


        <TextView
            android:id="@+id/tvAvgVolumeAmount"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic16dp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvVolumeLabel"
            tools:text="27M" />


        <TextView
            android:id="@+id/tvAvgVolumeLabel"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic4dp"
            android:text="@string/average_volume"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvAvgVolumeAmount" />


        <TextView
            android:id="@+id/tvAvgMarketCapAmount"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic16dp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvAvgVolumeLabel"
            tools:text="$867.34B" />


        <TextView
            android:id="@+id/tvAvgMarketCapLabel"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic4dp"
            android:text="@string/market_cap"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvAvgMarketCapAmount" />


        <TextView
            android:id="@+id/tvSupplyNumber"
            style="@style/CoinBitText.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic16dp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvAvgMarketCapLabel"
            tools:text="18.433" />

        <TextView
            android:id="@+id/tvSupplyLabel"
            style="@style/CoinBitText.TitleAlternate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic4dp"
            android:text="@string/supply"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvSupplyNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>